--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,32 @@
 ﻿{
+  "Certificates": {
+    "HTTPS": {
+      "Source": "Store",
+      "StoreLocation": "CurrentUser",
+      "StoreName": "My",
+      "Subject": "CN=localhost",
+      "AllowInvalid": true
+    }
+  },
+  "RafHost": {
+    "Endpoints": {
+      "Localhost": {
+        "Address": "127.0.0.1",
+        "Port": "5000"
+      },
+      "LocalhostHttps": {
+        "IsEnabled": true,
+        "Address": "127.0.0.1",
+        "Port": "5443",
+        // "Certificate": "HTTPS"
+        "Certificate": {
+          "Source": "File",
+          "Path": "certificateSeayo.pfx",
+          "Password": "Seayo123!"
+        }
+      }
+    }
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
