Updated footer links and fixed the problem of not being able to view the website in Production after adding RafHost.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,14 @@
 ﻿{
+  "RafHost": {
+    "Endpoints": {
+      "LocalhostHttps": {
+        "IsEnabled": false,
+        "Address": "127.0.0.1",
+        "Port": "5443",
+        "Certificate": null
+      }
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db"
   },
